Enable continuous integration

--- a/src/css/essential-above-the-fold.sass
+++ b/src/css/essential-above-the-fold.sass
@@ -1,4 +1,4 @@
-$background-color: #efefef
+$background-color: white
 
 body 
 	// Override browser default padding and margin
@@ -26,9 +26,45 @@ main
 	// Vertically align content
 	display: flex
 	align-items: center
-	justify-content: center
+	justify-content: flex-start
 	flex-direction: column
 
+
+#hero
+	position: relative
+	width: 100%
+	height: 600px
+	padding: 0 1rem
+
+	h1
+		font-size: 4rem
+		padding: 1rem
+		margin: 0
+		text-align: center
+	h2
+		font-size: 2rem
+		margin: 0 0 1rem 0
+		text-align: center
+	border-bottom: 1px solid rgba(0,0,0,.3)
+
+// ///////////////////////////////
+// Ctas
+// ///////////////////////////////
+.downloads
+	img
+		height: 50px
+		margin: 2rem 1rem
+.online
+	span
+		font-style: italic
+	a
+		font-size: 1rem
+		text-decoration: none
+		color: white
+		padding: .5rem 1rem
+		margin-top: 2rem
+		border-radius: 5px
+		background: black
 
 #footer 
 	// make the copyright notics less in your face
@@ -36,3 +72,52 @@ main
 	padding: 10px
 	opacity: 0.6
 	font-size: 13px
+
+// ///////////////////////////////
+// Helpers
+// ///////////////////////////////
+section
+	width: 1500px
+	max-width: 100%
+	// height: 500px
+	position: relative
+	padding: 12rem 5rem
+	margin: 3rem 0
+	display: flex
+	flex-direction: column
+	align-items: flex-start
+	justify-content: center
+
+	.cover
+		padding: 4rem 3rem
+		opacity: .3
+
+	.description
+		width: 400px
+		max-width: 100%
+		&.end
+			margin-left: auto
+		h2
+			font-size: 3rem
+			margin: .5rem 0
+		p
+			font-size: 1.5rem
+			margin: .5rem 0
+
+.cover
+	position: absolute
+	top: 0
+	height: 100%
+	opacity: .1
+	z-index: -1
+	&.left
+		left: 0
+	&.right
+		right: 0
+.center
+	display: flex
+	flex-direction: column
+	align-items: center
+	justify-content: center
+	&.row
+		flex-direction: row
