--- a/src/css/essential-above-the-fold.sass
+++ b/src/css/essential-above-the-fold.sass
@@ -72,6 +72,17 @@ main
 	padding: 10px
 	opacity: 0.6
 	font-size: 13px
+	display: flex
+	flex-direction: column
+	align-items: center
+	justify-content: center
+	.links
+		display: flex
+		flex-direction: row
+		align-items: center
+		justify-content: center
+	a
+		padding: 1rem
 
 // ///////////////////////////////
 // Helpers
