--- a/src/pug/_footer.pug
+++ b/src/pug/_footer.pug
@@ -1,5 +1,10 @@
 footer#footer
+	div.links
+		a( href='/' ) Home
+		a( href='privacy-policy.html' ) Privacy policy
+		a( href='terms-of-service.html' ) Terms of service
 	div © Copyright #{site.system.year} #{site.author.firstname} #{site.author.lastname}
+	
 script( type="application/ld+json" ).
 	{
 		"@context": "http://schema.org",
