Tagline and android link

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,4 @@
-- const page = { title: 'Home', desc: 'Home page', published: '2017-01-01', url: '/', featuredimg: '/image.jpg' }
+- const page = { title: 'Nutshell', desc: 'Slowcial media', published: '2017-01-01', url: '/', featuredimg: '/image.jpg' }
 doctype html
 html( lang=content.lang )
 	include pug/_header.pug
@@ -9,7 +9,7 @@ html( lang=content.lang )
 			div#hero.center
 				img( src='/assets/undraw_people_tax5-cropped.svg' ).cover
 				h1 Nutshell
-				h2 One message a week from people you care about
+				h2 Slowcial media. One message a week from people you care about
 				include pug/_ctas.pug
 
 			//- Release section
