--- a/src/pug/_ctas.pug
+++ b/src/pug/_ctas.pug
@@ -1,7 +1,7 @@
 div.downloads.center.row
-	a( href='#' )
+	a( target='_blank' href='https://play.google.com/store/apps/details?id=com.nutshell.nutshell' )
 		img( src='/assets/get-it-on-google-play.svg' )
-	a( href='#' )
+	a( target='_blank' href='#' )
 		img( src='/assets/download-on-app-store.svg' )
 div.online.center
 	span or...
