--- a/src/css/essential-above-the-fold.sass
+++ b/src/css/essential-above-the-fold.sass
@@ -38,13 +38,16 @@ main
 
 	h1
 		font-size: 4rem
+		font-weight: 300
 		padding: 1rem
 		margin: 0
 		text-align: center
 	h2
 		font-size: 2rem
+		font-weight: 300
 		margin: 0 0 1rem 0
 		text-align: center
+		padding: 0 1rem
 	border-bottom: 1px solid rgba(0,0,0,.3)
 
 // ///////////////////////////////
