Add apple store link

--- a/src/pug/_ctas.pug
+++ b/src/pug/_ctas.pug
@@ -1,7 +1,7 @@
 div.downloads.center.row
 	a( target='_blank' href='https://play.google.com/store/apps/details?id=com.nutshell.nutshell' )
 		img( src='/assets/get-it-on-google-play.svg' )
-	a( target='_blank' href='#' )
+	a( target='_blank' href='https://apps.apple.com/us/app/nutshell-slowcial-network/id1513342934?ls=1' )
 		img( src='/assets/download-on-app-store.svg' )
 div.online.center
 	span or...
