--- a/src/css/essential-above-the-fold.sass
+++ b/src/css/essential-above-the-fold.sass
@@ -1,6 +1,6 @@
 $background-color: white
 
-body 
+body
 	// Override browser default padding and margin
 	margin: 0
 	padding: 0
@@ -15,12 +15,10 @@ body
 	// Backgorund color
 	background: $background-color
 	// Box sizing
-	* 
+	*
 		box-sizing: border-box
-	
 
-
-main 
+main
 	// make footer sticky
 	flex: 1 0 auto
 	// Vertically align content
@@ -57,7 +55,7 @@ main
 .downloads
 	img
 		height: 50px
-		margin: 2rem 1rem
+		margin: 1rem 1rem
 .online
 	span
 		font-style: italic
@@ -66,11 +64,11 @@ main
 		text-decoration: none
 		color: white
 		padding: .5rem 1rem
-		margin-top: 2rem
+		margin-top: 1rem
 		border-radius: 5px
 		background: black
 
-#footer 
+#footer
 	// make the copyright notics less in your face
 	text-align: center
 	padding: 10px
@@ -136,3 +134,46 @@ section
 	justify-content: center
 	&.row
 		flex-direction: row
+
+////////////////////////
+// About Nutshell			//
+////////////////////////
+.button
+	display: flex
+	flex-direction: column
+	align-items: center
+	justify-content: center
+	span
+		font-style: normal
+	a
+		font-size: 1rem
+		text-decoration: none
+		color: white
+		padding: .5rem 1rem
+		margin-top: 2rem
+		margin-bottom: 2rem
+		border-radius: 5px
+		background: black
+
+.reading
+	width: 1000px
+	max-width: 100%
+	position: left
+	padding: 2rem 4rem
+	margin: 0 0
+	display: flex
+	flex-direction: column
+	align-items: flex-start
+	justify-content: center
+	&.end
+		margin-left: auto
+	h1
+		font-size: 3rem
+		margin: 1rem 0
+	h2
+		font-size: 2rem
+		margin: .5rem 0
+	p
+		font-size: 1.2rem
+		margin-top: 0
+		margin-bottom: 1rem
