--- a/src/css/essential-above-the-fold.sass
+++ b/src/css/essential-above-the-fold.sass
@@ -47,12 +47,30 @@ main
 		margin: 0 0 1rem 0
 		text-align: center
 		padding: 0 1rem
-	border-bottom: 1px solid rgba(0,0,0,.3)
+	border-bottom: 1px solid rgba(0,0,0,.1)
+
+// ///////////////////////////////
+// Menu
+// ///////////////////////////////
+.menu
+	display: flex
+	flex-direction: row
+	width: 100%
+	padding: 1rem
+	background: rgba( 0,0,0,.05)
+	a
+		text-decoration: none
+		color: black
+		padding: 0 1rem
+		text-align: center
+		&:hover
+			opacity: .5
 
 // ///////////////////////////////
 // Ctas
 // ///////////////////////////////
 .downloads
+	flex-wrap: wrap
 	img
 		height: 50px
 		margin: 1rem 1rem
