--- a/src/index.pug
+++ b/src/index.pug
@@ -12,8 +12,7 @@ html( lang=content.lang )
 			div#hero.center
 				img( src='/assets/undraw_people_tax5-cropped.svg' ).cover
 				h1 Nutshell
-				h2 Slowcial media - One message a week from people you care about
-				h2.center Try Nutshell now!
+				h2 One message a week from people you care about
 				include pug/_ctas.pug
 
 			//- Release section
