--- a/src/index.pug
+++ b/src/index.pug
@@ -26,7 +26,7 @@ html( lang=content.lang )
 				img( src='/assets/undraw_typewriter_i8xd.svg' ).cover.left
 
 			//- Release section
-			section.screenshot
+			section.screenshot.wrapreverse
 				div.description
 					h2 Read on Mondays
 					p Nutshells are released once a week in a skimmable format, and you will have all week to read what your friends have been up to.
@@ -46,7 +46,7 @@ html( lang=content.lang )
 				img( src='/assets/undraw_team_chat_y27k.svg' ).cover.right
 
 			// - Release section
-			section.screenshot
+			section.screenshot.wrapreverse
 				div.description
 					h2 AI Friend-finder
 					p Get friend suggestions based on your contact book or our friend-guesser AI.
