--- a/src/css/essential-above-the-fold.sass
+++ b/src/css/essential-above-the-fold.sass
@@ -171,11 +171,11 @@ section
 				background: black
 				border-bottom-left-radius: 2.334vh
 				border-bottom-right-radius: 2.334vh
-				border: 1px solid white
+				border: 2px solid rgba( 255, 255, 255, .3 )
 				border-top: none
 
 			img
-				margin: -25px 0 -5px
+				margin: -15px 0 -5px
 				width: 100%
 			
 
