--- a/src/pug/_footer.pug
+++ b/src/pug/_footer.pug
@@ -3,6 +3,8 @@ footer#footer
 		a( href='/' ) Home
 		a( href='privacy-policy.html' ) Privacy policy
 		a( href='terms-of-service.html' ) Terms of service
+		a( href='/about.html' ) About Nutshell
+		a( href='/howto.html' ) How to Nutshell
 	div © Copyright #{site.system.year} #{site.author.firstname} #{site.author.lastname}
 	
 script( type="application/ld+json" ).
