--- a/src/css/essential-above-the-fold.sass
+++ b/src/css/essential-above-the-fold.sass
@@ -32,22 +32,34 @@ main
 #hero
 	position: relative
 	width: 100%
-	height: 600px
+	height: 700px
 	padding: 0 1rem
 
+	#logo
+		height: 100px
+		width: 100px
+		border-radius: 15%
+		box-shadow: 0 0 10px 0 rgba(0, 0, 0, .2)
+
 	h1
-		font-size: 4rem
+		font-size: 3rem
 		font-weight: 300
 		padding: 1rem
 		margin: 0
 		text-align: center
 	h2
-		font-size: 2rem
-		font-weight: 300
-		margin: 0 0 1rem 0
+		font-size: 1.5rem
+		font-weight: 100
+		margin: 0 0 2rem 0
 		text-align: center
 		padding: 0 1rem
 	border-bottom: 1px solid rgba(0,0,0,.1)
+
+#getstarted
+	padding: .5rem
+	text-align: center
+	h2
+		margin-bottom: 2rem
 
 // ///////////////////////////////
 // Menu
@@ -72,8 +84,8 @@ main
 .downloads
 	flex-wrap: wrap
 	img
-		height: 50px
-		margin: 1rem 1rem
+		height: 40px
+		margin: .5rem
 .online
 	span
 		font-style: italic
@@ -101,6 +113,7 @@ main
 		flex-direction: row
 		align-items: center
 		justify-content: center
+		flex-wrap: wrap
 	a
 		padding: 1rem
 
